--- a/assets/base.scss
+++ b/assets/base.scss
@@ -1,6 +1,5 @@
 
 
-@import url('custom.scss') ;
 
 html, body, p, h1, h2, h3, h4, h5, h6 {
     scroll-behavior: smooth;
@@ -102,7 +101,7 @@ html, body, p, h1, h2, h3, h4, h5, h6 {
 }
 
 .hero {
-    border-radius: 24px !important;
+    border-radius: 24px;
     margin: 0 auto;
 }
 
