--- a/assets/base.scss
+++ b/assets/base.scss
@@ -19,6 +19,10 @@ html, body, p, h1, h2, h3, h4, h5, h6 {
     margin: auto;
 }
 
+.service-tab-container {
+    padding: 8px;
+}
+
 .hero-container {
     max-width: 1366px !important;
     margin: auto;
