--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -7,17 +7,34 @@ html, body, p, h1, h2, h3, h4, h5, h6 {
     font-family: 'Open Sans', sans-serif !important;
 }
 .hero {
-    background: url(../img/hero_360.jpg) no-repeat top left !important;
-    background-size: cover !important;
+       background: url(../img/hero_360.jpg) no-repeat top left !important;
+        background-size: cover !important;
     height: 450px;
     border-radius: 0 !important;
 }
-.search-container .v-tab .v-icon {
+.search-container .v-tab  .v-icon {
     display: none;
 }
 .search-container .v-tabs--density-default.v-tabs--stacked {
     --v-tabs-height: 40px !important;
 }
+.v-tab {
+    border-radius: 8px !important;
+}
+
+.service-tab-container {
+    padding: 0 !important;
+}
+
+.search-container .v-tabs .v-btn__content {
+    color: white !important;
+}
+
+.search-container .v-tabs .v-btn__underlay {
+    background-color: rgb(var(--v-theme-secondary)) !important;
+    border-radius: 8px !important;
+}
+
 .menu-bar {
     background-color: rgb(var(--v-theme-secondary)) !important;
     padding-top: 8px !important;
@@ -55,4 +72,16 @@ html, body, p, h1, h2, h3, h4, h5, h6 {
 .rounded-xl,
 .rounded-xl .v-bottom-sheet__content {
     border-radius: 12px !important;
+}
+
+.footer {
+    border-radius: 0 !important;
+}
+
+
+@media (max-width: 420px) {
+    .service-tab-container {
+       display: none !important;
+    }
+
 }
