--- a/assets/base.scss
+++ b/assets/base.scss
@@ -642,7 +642,8 @@ html, body, p, h1, h2, h3, h4, h5, h6 {
 
 .search-datepicker-menu  {
     margin: -120px 0 0 0;
-    box-shadow: 0px 4px 24px 0px rgba(32, 57, 96, 0.25);}
+    box-shadow: 0px 4px 24px 0px rgba(32, 57, 96, 0.25);
+}
 
 .search-datepicker-multiple .search-datepicker-multiple-header {
     width: 200% !important;
