--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -36,6 +36,10 @@ html, body, p, h1, h2, h3, h4, h5, h6 {
     border-radius: 8px !important;
 }
 
+.search-datepicker-menu  {
+    margin: -190px 0 0 0;
+}
+
 .menu-bar {
     background-color: rgb(var(--v-theme-secondary)) !important;
     padding-top: 8px !important;
