--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -16,7 +16,7 @@ html, body, p, h1, h2, h3, h4, h5, h6 {
 
  
 .search-datepicker-menu  {
-    margin: -180px 0 0 0;
+    margin: -140px 0 0 0;
 }
 
 .menu-bar {
@@ -58,7 +58,7 @@ html, body, p, h1, h2, h3, h4, h5, h6 {
 }
 
 .footer {
-    border-radius: 0 !important;
+    border-radius: 40px 40px 0 0 !important;
 }
 
 
